Revert "fix navbar active link"
This reverts commit d327bc26c7761ece3a5a7ecae17f65858dbb5da4.

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-          <h2 class="footer-heading">Thapar Institute of Engineering & Technology</h2>
+          <h2 class="footer-heading">Thapar Unversity</h2>
           <p>The Thapar Institute of Engineering and Technology (TIET) is one of India's oldest and finest educational
             institutions, which provides a steady source of highly skilled talent to the nation as well as overseas.</p>
           <ul class="ftco-footer-social p-0">
@@ -551,15 +551,13 @@
 
           <h2 class="footer-heading">Quick Links</h2>
           <ul class="list-unstyled">
-            <li><a href="index.html" class="py-2 d-block">Home</a></li>
-            <li><a href="streams.html" class="py-2 d-block">Engineering Streams</a></li>
-            <li><a href="alumni.html" class="py-2 d-block">Sessions by Alumni</a></li>
-            <li><a href="placement.html" class="py-2 d-block">Placements</a></li>
-            <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
-            <li><a href="http://www.thapar.edu/" class="py-2 d-block">Thapar Official Website</a></li>
-<!--             <li><a href="#" class="py-2 d-block">FAQ's</a></li>
+            <li><a href="#" class="py-2 d-block">Home</a></li>
+            <li><a href="#" class="py-2 d-block">Engineering Streams</a></li>
+            <li><a href="#" class="py-2 d-block">Meet Thapar Alumni</a></li>
+            <li><a href="#" class="py-2 d-block">Gallery</a></li>
+            <li><a href="#" class="py-2 d-block">FAQ's</a></li>
             <li><a href="#" class="py-2 d-block">HelpContact</a></li>
- -->          </ul>
+          </ul>
 
 
         </div>
