--- a/alumni.html
+++ b/alumni.html
@@ -28,9 +28,9 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item active"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
+          <li class="nav-item"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
 
-          <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions with our Alumni</a></li>
+          <li class="nav-item active"><a href="alumni.html" class="nav-link">Sessions by Alumni</a></li>
            <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
