--- a/placement.html
+++ b/placement.html
@@ -30,7 +30,7 @@
           <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
 
-          <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions by Alumni</a></li>
+          <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions with our Alumni</a></li>
            <li class="nav-item active"><a href="placement.html" class="nav-link">Placements</a></li>
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
