--- a/csed.html
+++ b/csed.html
@@ -30,12 +30,10 @@
           <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item active"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
 
-          <li class="nav-item"><a href="alumni.html" class="nav-link">Meet Thapar Alumni</a></li>
+          <li class="nav-item"><a href="alumni.html" class="nav-link">Session with our Alumni</a></li>
            <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
         </ul>
       </div>
     </div>
