--- a/alumni.html
+++ b/alumni.html
@@ -277,9 +277,151 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <div class="faded">
 <p>Director of Sales and Marketing, Great Wall Motor</p>
 <p>Alumnus Harvard Business School</p>
+<br><br><br><br><br>
 
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 4:00-5:00 PM  </span>  </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+
+<ul class="ftco-social text-center">
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"></span></a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-6 col-lg-3 ftco-animate">
+<div class="staff">
+<div class="img-wrap d-flex align-items-stretch">
+<div class="img align-self-stretch" style="background-image: url(images/alumni/brar.jpeg);"></div>
+</div>
+<div class="text pt-3 px-3 pb-4 text-center">
+<h3>Rakesh Anand</h3>
+<span class="position mb-2">1980, Mechanical Engineer</span>
+
+<div class="faded">
+<p>Had worked at CMD (Mazagon Dock Shipbuilders Limited)</p>
+<br><br><br><br><br><br><br>
+
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM </span>  </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+
+<ul class="ftco-social text-center">
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"></span></a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-6 col-lg-3 ftco-animate">
+<div class="staff">
+<div class="img-wrap d-flex align-items-stretch">
+<div class="img align-self-stretch" style="background-image: url(images/alumni/brar.jpeg);"></div>
+</div>
+<div class="text pt-3 px-3 pb-4 text-center">
+<h3>Aarti </h3>
+<span class="position mb-2">2010, Electronics instrumentation and control Engineer</span>
+
+<div class="faded">
+<p>Associate - Industry Leader (Automotive, Manufacturing and Engineering Design Services) - Career Business. Mercer Consulting India Private Limited</p>
+<p>Alumnus MBA - HR, SCMHRD Pune</p>
+
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 4:00-5:00 PM  </span>  </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+
+<ul class="ftco-social text-center">
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"></span></a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-6 col-lg-3 ftco-animate">
+<div class="staff">
+<div class="img-wrap d-flex align-items-stretch">
+<div class="img align-self-stretch" style="background-image: url(images/alumni/brar.jpeg);"></div>
+</div>
+<div class="text pt-3 px-3 pb-4 text-center">
+<h3>Manjit Singh</h3>
+<span class="position mb-2">1972, Electrical Engineer</span>
+
+<div class="faded">
+<p>Distinguished Scientist (Retired from BARC after 42 years of service )</p>
+<p>Had been a Fellow, Indian National Academy of engineers and President Robotics Society of India</p>
+<br><br><br>
+
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM;2:00-3:00 PM  </span>  </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+
+<ul class="ftco-social text-center">
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"></span></a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-6 col-lg-3 ftco-animate">
+<div class="staff">
+<div class="img-wrap d-flex align-items-stretch">
+<div class="img align-self-stretch" style="background-image: url(images/alumni/brar.jpeg);"></div>
+</div>
+<div class="text pt-3 px-3 pb-4 text-center">
+<h3>Rajesh Uppal</h3>
+<span class="position mb-2">1981, Mechanical Engineer</span>
+
+<div class="faded">
+<p>Sr Executive Director (HR & IT) at Maruti Suzuki India Limited. A total of 39 years of experience <br> Had worked at BHEL</p>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 4:00-5:00 PM  </span>  </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+
+<ul class="ftco-social text-center">
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"></span></a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-6 col-lg-3 ftco-animate">
+<div class="staff">
+<div class="img-wrap d-flex align-items-stretch">
+<div class="img align-self-stretch" style="background-image: url(images/alumni/brar.jpeg);"></div>
+</div>
+<div class="text pt-3 px-3 pb-4 text-center">
+<h3>Dharam Paul Sabarwal</h3>
+<span class="position mb-2">1970, Mechanical Engineer</span>
+
+<div class="faded">
+<p> Trained in the then USSR on MiG-29 aircraft.
+Visiting Professor in 5 Engg collages and 2 MBA institutes.
+Corporate trainer on Quality aspects.
+Published more than 100 articles in national newspapers/ magazines.
+Author of40 books including 26 on Aviation and Space subjects.
+<br> <br>26 years in Indian Air force ,took voluntary retirement after being Chief Engineer of An Operational Bade.</p>
+<p>Alumnus ME (Aero) from IISc, Bangalore</p>
+
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000">  1:00-2:00 PM  </span>  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 
 <ul class="ftco-social text-center">
@@ -305,6 +447,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 Bank of America, Hong Kong 
 Deutsche Bank</p>
 <p>Alumnus IIM Bangalore</p>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 1:00-2:00 PM </span>  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
@@ -340,14 +483,14 @@ Deutsche Bank</p>
     <tr>
       <th scope="row">10:00-11:00 AM</th>
       <td>All  - First cum first serve</td>
-      <td>Rachna, Gauri, Hardeep, Param Tind, Ajay Sharma </td>
+      <td>Rachna, Gauri, Param Tind, Manjit Singh  </td>
       <td>@mdo</td>
        <td>Hardeep</td>
     </tr>
     <tr>
       <th scope="row">11:00-12:00 PM</th>
       <td>All  - First cum first serve</td>
-      <td>Jyotsna, Jagatbir, Ajay Kumar, Chaman, Manoj</td>
+      <td>Jyotsna, Ajay Kumar, DP Sabarwal, Rajesh Uppal, Rakesh Anand</td>
       <td>@mdo</td>
        <td>Jagatbir</td>
     </tr>
@@ -361,14 +504,14 @@ Deutsche Bank</p>
     <tr>
       <th scope="row">1:00-2:00 PM</th>
       <td>Mechanical</td>
-      <td>Ajay Sharma, Param Thind</td>
+      <td>DP Sabarwal, Param Thind</td>
       <td>@fat</td>
        <td>Mansi</td>
     </tr>
     <tr>
       <th scope="row">2:00-3:00 PM</th>
       <td>Electronics ,Electrical, Instrumentation</td>
-      <td>Jyotsna, Chaman</td>
+      <td> Jyotsna, Manjit Singh</td>
       <td>@twitter</td>
        <td>Mansi</td>
     </tr>
@@ -382,7 +525,7 @@ Deutsche Bank</p>
     <tr>
       <th scope="row">4:00-5:00 PM</th>
       <td>MBA+Liberal Arts+Masters and Others</td>
-      <td>Jagatbir Saluja, Hardeep Brar</td>
+      <td>Hardeep Brar, Rajesh Uppal</td>
       <td>@twitter</td>
        <td>Mansi</td>
     </tr>
