--- a/streams.html
+++ b/streams.html
@@ -216,12 +216,45 @@
               <h3 class="heading">Chemical Engineering</h3>
               <p>The Department of Chemical Engineering of Thapar Institute of Engineering and Technology was
                 established in 1992 with the Ph.D programme. </p>
-              <a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span
+              <a href="chemical.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
             </div>
           </div>
         </div>
 
+
+
+<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
+          <div class="d-block services text-center">
+            <div class="icon d-flex align-items-center justify-content-center">
+              <img class="logosize" src="images/department/microscope.png">
+            </div>
+            <div class="media-body p-4">
+              <h3 class="heading">LMTSM</h3>
+              <p>LM Thapar School of Management </p>
+              <a href="lmtsm.html" class="btn-custom d-flex align-items-center justify-content-center"><span
+                  class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+            </div>
+          </div>
+        </div>
+
+
+
+<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
+          <div class="d-block services text-center">
+            <div class="icon d-flex align-items-center justify-content-center">
+              <img class="logosize" src="images/department/microscope.png">
+            </div>
+            <div class="media-body p-4">
+              <h3 class="heading">TSLAS</h3>
+              <p>Thapar School
+of Liberal Arts & Sciences </p>
+              <a href="tslas.html" class="btn-custom d-flex align-items-center justify-content-center"><span
+                  class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+            </div>
+          </div>
+        </div>
+</div>
         <!-- <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
 <div class="d-block services text-center">
 <div class="icon d-flex align-items-center justify-content-center">
@@ -236,6 +269,25 @@
 </div>
 </div>
  -->
+
+ <div class="row mt-5 pt-4">
+        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
+          <div class="d-block services text-center">
+            <div class="icon d-flex align-items-center justify-content-center">
+              <img class="logosize" src="images/department/microscope.png">
+            </div>
+            <div class="media-body p-4">
+              <h3 class="heading">Humanities</h3>
+              <p>School of
+Humanities & Social Sciences, TIET </p>
+              <a href="humanities.html" class="btn-custom d-flex align-items-center justify-content-center"><span
+                  class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+            </div>
+          </div>
+        </div>
+
+
+
       </div>
     </div>
   </section>
