--- a/lmtsm.html
+++ b/lmtsm.html
@@ -154,7 +154,7 @@
     <!-- <div class="row no-gutters slider-text align-items-end"> -->
     <!-- <div class="col-md-9 ftco-animate pb-5"> -->
     <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
-    <h1 class="mb-0 bread">CSED</h1>
+    <h1 class="mb-0 bread">L. M. School of Thapar Management</h1>
     <!-- </div> -->
     <!-- </div> -->
     <!-- </div> -->
@@ -199,7 +199,7 @@
 </section>
 
 <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-<a href="http://med.thapar.edu/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+<a href="http://lmtsm.thapar.edu/index.php/faculty-and-research/faculty-lmtsm?_ga=2.167302014.1955838888.1600158014-952579136.1569080336" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
     
 </div>
 
