--- a/tslas.html
+++ b/tslas.html
@@ -18,6 +18,7 @@
 </head>
 <body>
 
+
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
       </span><img src="images/logo.jpg" style="width:10%;">
@@ -154,10 +155,18 @@
     <!-- <div class="row no-gutters slider-text align-items-end"> -->
     <!-- <div class="col-md-9 ftco-animate pb-5"> -->
     <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
-    <h1 class="mb-0 bread">CSED</h1>
+    <h1 class="mb-0 bread">TSLAS</h1>
     <!-- </div> -->
     <!-- </div> -->
     <!-- </div> -->
+    <div id="light">
+          <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
+          <!-- <video id="VisaChipCardVideo" width="600" controls>
+              <source src="https://youtu.be/vvCOSclixJE" type="video/mp4"> -->
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/H4ljv2EjPxw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <!--Browser does not support <video> tag -->
+          </video>
+        </div>
 <div class="row justify-content-center pb-5 mb-3">
 <div class="col-md-7 heading-section text-center ftco-animate">
 <h2 style="padding-left:200px;">Connect With Us</h2>
@@ -199,7 +208,7 @@
 </section>
 
 <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-<a href="http://med.thapar.edu/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+<a href="http://tslas.thapar.edu/?_ga=2.167818209.1955838888.1600158014-952579136.1569080336" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
     
 </div>
 
