--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
 </button>
 <div class="collapse navbar-collapse" id="ftco-nav">
 <ul class="navbar-nav ml-auto">
-<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+<li class="nav-item active"><a href="home.html" class="nav-link">Home</a></li>
 <li class="nav-item"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
 
 <li class="nav-item"><a href="alumni.html" class="nav-link">Meet Thapar Alumni</a></li>
@@ -44,7 +44,7 @@
 <div class="container">
 <div class="row no-gutters slider-text align-items-end">
 <div class="col-md-9 ftco-animate pb-5">
-<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog <i class="ion-ios-arrow-forward"></i></span></p>
+<p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog <i class="ion-ios-arrow-forward"></i></span></p>
 <h1 class="mb-0 bread">Blog</h1>
 </div>
 </div>
@@ -187,7 +187,7 @@
 
           <h2 class="footer-heading">Quick Links</h2>
           <ul class="list-unstyled">
-            <li><a href="index.html" class="py-2 d-block">Home</a></li>
+            <li><a href="home.html" class="py-2 d-block">Home</a></li>
             <li><a href="streams.html" class="py-2 d-block">Engineering Streams</a></li>
             <li><a href="alumni.html" class="py-2 d-block">Sessions by Alumni</a></li>
             <li><a href="placement.html" class="py-2 d-block">Placements</a></li>
