--- a/home.html
+++ b/home.html
@@ -131,10 +131,12 @@
   
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+<!-- FOR INSIDE FORM::::: -->
+
+<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
   Register Here!
 </button>
-
+ -->
 </div>
 
 <!-- Modal -->
