--- a/streams.html
+++ b/streams.html
@@ -174,7 +174,7 @@
         <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
-              <img class="logosize" src="images/department/Group 2282.png">
+              <img class="logosize" src="images/brain.png">
             </div>
             <div class="media-body p-4">
               <h3 class="heading">Electronics & Communication</h3>
@@ -210,7 +210,7 @@
         <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
-              <img class="logosize" src="images/department/microscope.png">
+              <img class="logosize" src="images/chemistry.png">
             </div>
             <div class="media-body p-4">
               <h3 class="heading">Chemical Engineering</h3>
@@ -227,7 +227,7 @@
 <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
-              <img class="logosize" src="images/department/microscope.png">
+              <img class="logosize" src="images/worker.png">
             </div>
             <div class="media-body p-4">
               <h3 class="heading">LMTSM</h3>
@@ -243,7 +243,7 @@
 <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
-              <img class="logosize" src="images/department/microscope.png">
+              <img class="logosize" src="images/science.png">
             </div>
             <div class="media-body p-4">
               <h3 class="heading">TSLAS</h3>
@@ -274,7 +274,7 @@ of Liberal Arts & Sciences </p>
         <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-top: 70px;">
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
-              <img class="logosize" src="images/department/microscope.png">
+              <img class="logosize" src="images/psychology.png">
             </div>
             <div class="media-body p-4">
               <h3 class="heading">Humanities</h3>
