--- a/alumni.html
+++ b/alumni.html
@@ -296,7 +296,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <div class="col-md-6 col-lg-3 ftco-animate">
 <div class="staff">
 <div class="img-wrap d-flex align-items-stretch">
-<div class="img align-self-stretch" style="background-image: url(images/alumni/brar.jpeg);"></div>
+<div class="img align-self-stretch" style="background-image: url(images/alumni/rakesh.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Rakesh Anand</h3>
@@ -323,7 +323,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <div class="col-md-6 col-lg-3 ftco-animate">
 <div class="staff">
 <div class="img-wrap d-flex align-items-stretch">
-<div class="img align-self-stretch" style="background-image: url(images/alumni/brar.jpeg);"></div>
+<div class="img align-self-stretch" style="background-image: url(images/aarti.jpeg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Aarti </h3>
@@ -334,7 +334,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <p>Alumnus MBA - HR, SCMHRD Pune</p>
 
 <p style="font-weight: bold;">DATE:   </p>
-<p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 4:00-5:00 PM  </span>  </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000">   </span>  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 
 <ul class="ftco-social text-center">
@@ -350,7 +350,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <div class="col-md-6 col-lg-3 ftco-animate">
 <div class="staff">
 <div class="img-wrap d-flex align-items-stretch">
-<div class="img align-self-stretch" style="background-image: url(images/alumni/brar.jpeg);"></div>
+<div class="img align-self-stretch" style="background-image: url(images/alumni/manjit.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Manjit Singh</h3>
@@ -378,7 +378,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <div class="col-md-6 col-lg-3 ftco-animate">
 <div class="staff">
 <div class="img-wrap d-flex align-items-stretch">
-<div class="img align-self-stretch" style="background-image: url(images/alumni/brar.jpeg);"></div>
+<div class="img align-self-stretch" style="background-image: url(images/alumni/rajesh.jpeg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Rajesh Uppal</h3>
@@ -405,7 +405,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <div class="col-md-6 col-lg-3 ftco-animate">
 <div class="staff">
 <div class="img-wrap d-flex align-items-stretch">
-<div class="img align-self-stretch" style="background-image: url(images/alumni/brar.jpeg);"></div>
+<div class="img align-self-stretch" style="background-image: url(images/alumni/dp.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Dharam Paul Sabarwal</h3>
@@ -450,6 +450,58 @@ Deutsche Bank</p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br>
 <p style="font-weight: bold;">DATE:   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 1:00-2:00 PM </span>  </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+
+<ul class="ftco-social text-center">
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"></span></a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-6 col-lg-3 ftco-animate">
+<div class="staff">
+<div class="img-wrap d-flex align-items-stretch">
+<div class="img align-self-stretch" style="background-image: url(images/alumni/gagan.jpeg);"></div>
+</div>
+<div class="text pt-3 px-3 pb-4 text-center">
+<h3>Gagan Gupta</h3>
+<span class="position mb-2">1994, Civil Engineer</span>
+<div class="faded">
+<p>Dy Director Technical,CGEWHO MoHousing and Urban Affairs,Working for past 22 years</p>
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 3:00-4:00 PM </span>  </p>
+<a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+
+<ul class="ftco-social text-center">
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a></li>
+<li class="ftco-animate"><a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"></span></a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-6 col-lg-3 ftco-animate">
+<div class="staff">
+<div class="img-wrap d-flex align-items-stretch">
+<div class="img align-self-stretch" style="background-image: url(images/alumni/ish.jpeg);"></div>
+</div>
+<div class="text pt-3 px-3 pb-4 text-center">
+<h3>Ish Ahuja</h3>
+<span class="position mb-2">1994, Mechanical Engineer</span>
+<div class="faded">
+<p>Project Controls Manager - NSW/ACT - National Infrastructure Team (John Holland)</p>
+<p>Had worked in Cushman & Wakefield, Laing O’Rourke, Acciona</p>
+<br><br><br>
+<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">TIME: <span style="color:#640000"> 3:00-4:00 PM </span>  </p>
 <a href="#" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 
 <ul class="ftco-social text-center">
@@ -518,7 +570,7 @@ Deutsche Bank</p>
     <tr>
       <th scope="row">3:00-4:00 PM</th>
       <td>Civil</td>
-      <td>Gauri, Manoj, Gagan</td>
+      <td>Gauri, Manoj, Gagan,Ish</td>
       <td>@twitter</td>
        <td>Mansi</td>
     </tr>
