--- a/eced.html
+++ b/eced.html
@@ -166,31 +166,41 @@
 <div class="row">
 <div class="col-md-4 ftco-animate">
 <div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="img" style="background-image: url(images/ashutosh.jpg);height: 450px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
+<span class="excerpt d-block"style="text-align: center;">Dr Ashutosh K Singh</span>
+<p style="text-align: center;">Program Coordinator, BE (ENC)</p>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="https://tiet.zoom.us/j/96738464636?pwd=bDNKamlmaUMwaHZscE14RVk4a1J4UT09" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<br>
+<p style="text-align: center;">DATE & TIME : Sep 21, 2020 09:00 AM</p>
 </div>
 </div>
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="img" style="background-image: url(images/manu.gif); height: 450px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
+<span class="excerpt d-block" style="text-align: center;">Dr Manu Bansal</span>
+<p style="text-align: center;">Program Coordinator, BE(ECE)</p>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="https://tiet.zoom.us/j/96738464636?pwd=bDNKamlmaUMwaHZscE14RVk4a1J4UT09" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<br>
+<p style="text-align: center;">DATE & TIME : Sep 21, 2020 09:00 AM</p>
 </div>
 </div>
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="img" style="background-image: url(images/sumit.jpg);height: 450px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
+<span class="excerpt d-block"style="text-align: center;"> Dr Sumit Vyas</span>
+<p style="text-align: center;">ECED Web Incharge</p>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+
+<a href="https://tiet.zoom.us/j/96738464636?pwd=bDNKamlmaUMwaHZscE14RVk4a1J4UT09" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<br>
+<p style="text-align: center;">DATE & TIME : Sep 21, 2020 09:00 AM</p>
 </div>
 </div>
 </div>
