--- a/streams.html
+++ b/streams.html
@@ -231,7 +231,7 @@
             </div>
             <div class="media-body p-4">
               <h3 class="heading">LMTSM</h3>
-              <p>LM Thapar School of Management </p>
+              <p>LM Thapar School of Management, the B-School of Thapar Institute of Engineering & Technology is one of the top ranked Business Schools in the country.Prominent among the programs are MBA (full time), MBA Executive (hybrid), PhD (residential) and PhD (executive). The Business School takes pride in having very accomplished faculty, the school also hosts faculty from  its 15+ partner universities from across the world. </p>
               <a href="lmtsm.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
             </div>
