--- a/lmtsm.html
+++ b/lmtsm.html
@@ -166,31 +166,55 @@
 <div class="row">
 <div class="col-md-4 ftco-animate">
 <div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="img" style="background-image: url(images/LM1.jpg); height: 450px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
+<span class="excerpt d-block" style="text-align: center;">Dr. Sandeep Goyal</span>
+<p style="text-align: center;">PGP Head, MBA Program</p>
+<br><br>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="https://zoom.us/j/97726398272" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<br>
+<p style="text-align: center;">TIME : 9:30 AM – 10:30 AM</p>
 </div>
 </div>
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="img" style="background-image: url(images/LMkarminder.jpg); height: 450px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
+<span class="excerpt d-block" style="text-align: center;">Dr.Karminder Ghuman</span>
+<p style="text-align: center;">Head, Venture Lab – TIET, Associate Professor, Entrepreneurship and Marketing</p>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="https://zoom.us/j/97726398272" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<br>
+<p style="text-align: center;">TIME : 10:30 AM – 11:30 AM</p>
 </div>
 </div>
 </div>
 <div class="col-md-4 ftco-animate">
 <div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="img" style="background-image: url(images/LMankit.jpg); height: 450px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
+<span class="excerpt d-block" style="text-align: center;">Dr. Ankit Mahindroo</span>
+<p style="text-align: center;">Chair - Academic Operations</p>
+<br><br>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<a href="https://zoom.us/j/97726398272" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<br>
+<p style="text-align: center;">TIME :11:30 AM – 12:30 PM</p>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate">
+<div class="block-7">
+<div class="img" style="background-image: url(images/LMankush.jpg); height: 450px;"></div>
+<div class="text-center p-4">
+<span class="excerpt d-block" style="text-align: center;">Mr. Ankush Arora</span>
+<p style="text-align: center;">Admissions Team</p>
+
+<a href="https://zoom.us/j/97726398272" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+<br>
+<p style="text-align: center;">TIME : 9:30 AM – 5:00 PM</p>
 </div>
 </div>
 </div>
@@ -199,7 +223,7 @@
 </section>
 
 <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-<a href="http://lmtsm.thapar.edu/index.php/faculty-and-research/faculty-lmtsm?_ga=2.167302014.1955838888.1600158014-952579136.1569080336" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
+<a href="http://lmtsm.thapar.edu/index.php/admissions/mba/programme-overview" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
     
 </div>
 
