--- a/home.html
+++ b/home.html
@@ -102,7 +102,7 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active"><a href="home.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
+          <li class="nav-item"><a href="streams.html" class="nav-link">Academic Units</a></li>
 
           <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions with our Alumni</a></li>
           <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
@@ -167,10 +167,10 @@
               <img src="images/es.png" style="width:130%;">
             </div>
             <div class="media-body">
-              <h3 class="heading">Streams</h3>
-              <p style="font-weight: bold;">ENGINEERING STREAMS</p>
-              <p>Explore Different Streams</p>
-              <p><a href="streams.html" class="btn btn-primary mr-md-4 py-3 px-4">Streams & Branches<span
+              <h3 class="heading">Academic Units</h3>
+              <p style="font-weight: bold;">VARIOUS ACADEMIC STREAMS</p>
+              <p>Explore Different academic units</p>
+              <p><a href="streams.html" class="btn btn-primary mr-md-4 py-3 px-4">Academic Units<span
                     class="ion-ios-arrow-forward"></span></a></p>
               <a href="streams.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
@@ -202,9 +202,9 @@
               <img src="images/help.png" style="width:140%;">
             </div>
             <div class="media-body">
-              <h3 class="heading">Placements</h3>
-              <p style="font-weight: bold;">Know more about data-placement at Thapar</p>
-              <!-- <p>Have any doubts regarding the placements?</p> -->
+              <h3 class="heading">Industry Engagement and Placement Cell</h3>
+              <!--<p style="font-weight: bold;">Know more about data-placement at Thapar</p>
+             <p>Have any doubts regarding the placements?</p> -->
               <p><a href="placement.html" class="btn btn-primary mr-md-4 py-3 px-4" style="margin-top: 40px;">Contact Placements<span
                     class="ion-ios-arrow-forward"></span></a></p>
               <a href="placement.html" class="btn-custom d-flex align-items-center justify-content-center"><span
@@ -559,7 +559,7 @@
           <h2 class="footer-heading">Quick Links</h2>
           <ul class="list-unstyled">
             <li><a href="home.html" class="py-2 d-block">Home</a></li>
-            <li><a href="streams.html" class="py-2 d-block">Engineering Streams</a></li>
+            <li><a href="streams.html" class="py-2 d-block">Academic Units</a></li>
             <li><a href="alumni.html" class="py-2 d-block">Sessions by Alumni</a></li>
             <li><a href="placement.html" class="py-2 d-block">Placements</a></li>
             <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
