--- a/placement.html
+++ b/placement.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Engineering Streams</title>
+<title>Academic Units</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
+          <li class="nav-item"><a href="streams.html" class="nav-link">Academic Units</a></li>
 
           <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions with our Alumni</a></li>
            <li class="nav-item active"><a href="placement.html" class="nav-link">Placements</a></li>
@@ -236,7 +236,7 @@
           <h2 class="footer-heading">Quick Links</h2>
           <ul class="list-unstyled">
             <li><a href="home.html" class="py-2 d-block">Home</a></li>
-            <li><a href="streams.html" class="py-2 d-block">Engineering Streams</a></li>
+            <li><a href="streams.html" class="py-2 d-block">Academic Units</a></li>
             <li><a href="alumni.html" class="py-2 d-block">Sessions by Alumni</a></li>
             <li><a href="placement.html" class="py-2 d-block">Placements</a></li>
             <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
