--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
+          <li class="nav-item"><a href="streams.html" class="nav-link">Academic Units</a></li>
 
           <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions with our Alumni</a></li>
           <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
@@ -224,7 +224,7 @@
           <h2 class="footer-heading">Quick Links</h2>
           <ul class="list-unstyled">
             <li><a href="home.html" class="py-2 d-block">Home</a></li>
-            <li><a href="streams.html" class="py-2 d-block">Engineering Streams</a></li>
+            <li><a href="streams.html" class="py-2 d-block">Academic Units</a></li>
             <li><a href="alumni.html" class="py-2 d-block">Sessions by Alumni</a></li>
             <li><a href="placement.html" class="py-2 d-block">Placements</a></li>
             <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
