--- a/streams.html
+++ b/streams.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Engineering Streams</title>
+  <title>Academic Units</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap"
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-          <li class="nav-item active"><a href="streams.html" class="nav-link">Engineering Streams</a></li>
+          <li class="nav-item active"><a href="streams.html" class="nav-link">Academic Units</a></li>
 
           <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions with our Alumni</a></li>
           <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
@@ -54,7 +54,7 @@
     <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i -->
     <!-- class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i -->
     <!-- class="ion-ios-arrow-forward"></i></span></p> -->
-    <h1 class="mb-0 bread">Engineering Streams</h1>
+    <h1 class="mb-0 bread">Academic Units</h1>
     <!-- </div> -->
     <!-- </div> -->
   </div>
@@ -324,7 +324,7 @@ Humanities & Social Sciences, TIET </p>
           <h2 class="footer-heading">Quick Links</h2>
           <ul class="list-unstyled">
             <li><a href="home.html" class="py-2 d-block">Home</a></li>
-            <li><a href="streams.html" class="py-2 d-block">Engineering Streams</a></li>
+            <li><a href="streams.html" class="py-2 d-block">Academic Units</a></li>
             <li><a href="alumni.html" class="py-2 d-block">Sessions by Alumni</a></li>
             <li><a href="placement.html" class="py-2 d-block">Placements</a></li>
             <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
