--- a/csed.html
+++ b/csed.html
@@ -161,31 +161,30 @@
 </div>
 </div>
 <div class="row">
-<div class="col-md-4 ftco-animate">
+
+<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
+<div class="img" style="background-image: url(images/hodcse.jpg);height:450px;"></div>
+<div class="text-center p-4">
+<span class="excerpt d-block"style="text-align: center;">Dr Maninder Singh</span>
+<p style="text-align: center;">HOD,CSED</p>
+
+<a href="https://tiet.zoom.us/my/msingh/" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
+</div>
+</div>
+</div>
+<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;">
+<div class="block-7">
+<div class="img" style="background-image: url(images/dipto2.jpg);height:450px;"></div>
 <div class="text-center p-4">
 <span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
-
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
-
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
+<p style="text-align: center;">Assistant Professor,CSED</p>
 
 <a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
 </div>
