--- a/home.html
+++ b/home.html
@@ -307,7 +307,7 @@
               <strong class="number" data-number="16">0</strong>
             </div>
             <div class="text">
-              <span>Centres</span>
+              <span>Units</span>
             </div>
           </div>
         </div>
@@ -482,7 +482,7 @@
           <div class="section-title text-center mb-80">
             <span class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".2s"><strong>Eagle Eye
                 View</strong></span>
-            <h1 class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".4s">Thapar - Map</h1>
+            <h1 class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".4s">TIET - Map</h1>
           </div>
         </div>
       </div>
