--- a/lmtsm.html
+++ b/lmtsm.html
@@ -27,20 +27,21 @@
       </button>
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-          <li class="nav-item active"><a href="streams.html" class="nav-link">Academic Units</a></li>
+          <li class="nav-item active"><a href="home.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="streams.html" class="nav-link">Academic Units</a></li>
 
-          <li class="nav-item"><a href="alumni.html" class="nav-link">Meet Thapar Alumni</a></li>
+          <li class="nav-item"><a href="alumni.html" class="nav-link">Sessions with our Alumni</a></li>
           <li class="nav-item"><a href="placement.html" class="nav-link">Placements</a></li>
 
 
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
+          <!-- <li class="nav-item"><a href="faqs.html" class="nav-link">FAQ's</a></li> -->
+          <!-- <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li> -->
         </ul>
       </div>
     </div>
   </nav>
+
 
 <!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" data-stellar-background-ratio="0.5"> -->
 <!-- <div class="overlay"></div> -->
@@ -269,7 +270,6 @@
 <!--             <li><a href="#" class="py-2 d-block">FAQ's</a></li>
             <li><a href="#" class="py-2 d-block">HelpContact</a></li>
  -->          </ul>
-
 
         </div>
         <div class="row mt-5">
