--- a/home.html
+++ b/home.html
@@ -169,7 +169,7 @@
             <div class="media-body">
               <h3 class="heading">Academic Units</h3>
               <p style="font-weight: bold;">VARIOUS ACADEMIC STREAMS</p>
-              <p>Explore Different academic units</p>
+              <p>                      </p>
               <p><a href="streams.html" class="btn btn-primary mr-md-4 py-3 px-4">Academic Units<span
                     class="ion-ios-arrow-forward"></span></a></p>
               <a href="streams.html" class="btn-custom d-flex align-items-center justify-content-center"><span
@@ -482,7 +482,7 @@
           <div class="section-title text-center mb-80">
             <span class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".2s"><strong>Eagle Eye
                 View</strong></span>
-            <h1 class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".4s">TIET - Map</h1>
+            <h1 class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".4s"> Thapar Institute of Engineering & Technology- Map</h1>
           </div>
         </div>
       </div>
