--- a/home.html
+++ b/home.html
@@ -307,7 +307,7 @@
               <strong class="number" data-number="16">0</strong>
             </div>
             <div class="text">
-              <span>Units</span>
+              <span>Academic Units</span>
             </div>
           </div>
         </div>
