--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ $('.tab a').on('click', function (e) {
 
 </script>
 
-	<script>
+	<!-- <script>
 
   const scriptURL = 'https://script.google.com/macros/s/AKfycbw_DgWXXYNyFWkMRSkyOrtfLbLBSPoVw9IVTq60qK_Hd-Pki41S/exec'
   const form = document.forms['submit-to-google-sheet']
@@ -241,7 +241,7 @@ $('.tab a').on('click', function (e) {
   })
 
 </script>
-
+ -->
 
 
 
